--- a/skfjni/build.gradle
+++ b/skfjni/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:25.3.1'
     testImplementation 'junit:junit:4.12'
+    //implementation files('libs/javastruct-0.2.jar')
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
