--- a/skfjni/src/main/AndroidManifest.xml
+++ b/skfjni/src/main/AndroidManifest.xml
@@ -1,3 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ccore.jni" />
+    package="com.ccore.jni">
+    <!--NFC权限-->
+    <uses-permission android:name="android.permission.NFC" />
+    <!-- 要求当前设备必须要有NFC芯片 -->
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+</manifest>
+
 
